refactor: enforce client status, externalize secrets and switch to DTO-based services